fixed Card's links activating before visible; tuned Cards layout/spacing, added top-border

--- a/src/Components/Navbar/_navbar.scss
+++ b/src/Components/Navbar/_navbar.scss
@@ -1,60 +1,60 @@
 .nav-wrapper {
-  display: grid;
-  grid-template-columns: auto;
-  position: fixed;
-  z-index: $nav-wrapper-layer;
+	display: grid;
+	grid-template-columns: auto;
+	position: fixed;
+	z-index: $nav-wrapper-layer;
 
-  // position: absolute;
-  // top: 0;
-  // left: 0;
+	// position: absolute;
+	// top: 0;
+	// left: 0;
 }
 #navbar {
-  @include fluid-type(height, $min-width, $max-width, 48px, 60px);
-  // background-color: $gap-blue; 
-  background-color: rgb(45, 126, 154);
-  // border-bottom: 1.5px solid $secondary-orange-light;
-  border-bottom: 2px solid rgb(6, 18, 104);
-  z-index: $navbar-layer;
+	@include fluid-type(height, $min-width, $max-width, 48px, 60px);
+	// background-color: $gap-blue;
+	background-color: $background-blue-light;
+	// border-bottom: 1.5px solid $secondary-orange-light;
+	border-bottom: 2px solid $border-blue-dark;
+	z-index: $navbar-layer;
 }
 #navSidebar {
-  z-index: $sidebar-layer;
+	z-index: $sidebar-layer;
 }
 .navSidebar-off {
-  display: none;
-  opacity: 0;
-  transition: all $sidebar-trans-time linear;
-  visibility: hidden;
+	display: none;
+	opacity: 0;
+	transition: all $sidebar-trans-time linear;
+	visibility: hidden;
 }
 .navSidebar-on {
-  animation: fade $sidebar-trans-time;
-  display: block;
-  opacity: 1;
-  visibility: visible;
+	animation: fade $sidebar-trans-time;
+	display: block;
+	opacity: 1;
+	visibility: visible;
 }
 @keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 #menuIcon {
-  padding: 10px; //needs to be responsive
-  position: absolute;
-  right: $app-margin-LR;
-  top: 0;
-  z-index: $icon-layer;
+	padding: 10px; //needs to be responsive
+	position: absolute;
+	right: $app-margin-LR;
+	top: 0;
+	z-index: $icon-layer;
 }
 #overlay {
-  z-index: $overlay-layer;
+	z-index: $overlay-layer;
 }
 .overlay-off {
-  opacity: 0;
-  transition: all $sidebar-trans-time ease-in-out;
-  visibility: hidden;
+	opacity: 0;
+	transition: all $sidebar-trans-time ease-in-out;
+	visibility: hidden;
 }
 .overlay-on {
-  opacity: 1;
-  visibility: visible;
+	opacity: 1;
+	visibility: visible;
 }
