--- a/src/Components/Portfolio/_portfolio.scss
+++ b/src/Components/Portfolio/_portfolio.scss
@@ -3,27 +3,22 @@
 	background-color: rgb(222, 222, 222);
 	display: grid;
 	height: 100%;
+	justify-items: center;
 	width: 100%;
 }
-.card-grid {
+.card-container {
 	color: black;
 	display: flex;
 	flex-flow: row wrap;
-	// grid-gap: 4px 4px;
-	justify-content: center;
+	justify-content: space-evenly;
 	margin-top: 8vh;
 	max-width: $max-width;
 	padding-bottom: 12vh;
+	width: 100%;
 
 	a:link,
 	a:visited {
 		color: black;
 		text-decoration: none;
 	}
-}
-.card-grid--large {
-	// grid-template-columns: auto auto auto;
-}
-.card-grid--small {
-	// grid-template-columns: auto auto auto;
 }
