--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -1,11 +1,15 @@
 //SHOULD MAKE CARD HEIGHT & WIDTH SCALE RESPONSIVELY
 .card {
 	background-color: $background-white;
+
+	border-top: 2px solid $border-blue-dark;
+	margin: 1rem 0 1rem 0;
+
 	font-family: 'Livvic', sans-serif;
-	height: 100vw; //Intentionally basing card height relative to width, to maintain porportions
+	height: auto;
 	opacity: 0;
 	position: relative;
-	width: 100vw;
+	width: 100%;
 	z-index: $above-confetti-layer;
 	max-height: calc(.27 * #{$max-width});
 	max-width: calc(.36 * #{$max-width});
